force-app/main/default/objects/cve__Payment__c/cve__Payment__c.object-meta.xml
<CustomObject>
    <customHelpPage>cve__PaymentHelp</customHelpPage>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{YYYY}-{000000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>