force-app/main/default/objects/cve__Payment__c/fields/cve__Account__c.field-meta.xml
<CustomField>
    <fullName>cve__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>