force-app/main/default/objects/cve__Payment__c/fields/cve__AdjustedBenefitStartDateApplied__c.field-meta.xml
<CustomField>
    <fullName>cve__AdjustedBenefitStartDateApplied__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this payment has had its date range modified by the Adjusted Benefit Start field</inlineHelpText>
    <label>Adjusted Benefit Start Date Applied</label>
    <type>Checkbox</type>
</CustomField>