force-app/main/default/objects/cve__Payment__c/fields/cve__AdviceToPay__c.field-meta.xml
<CustomField>
    <fullName>cve__AdviceToPay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advice to Pay</label>
    <type>Checkbox</type>
</CustomField>