force-app/main/default/objects/cve__Payment__c/fields/cve__AssigneeName__c.field-meta.xml
<CustomField>
    <fullName>cve__AssigneeName__c</fullName>
    <formula>cve__Assignment__r.cve__AssigneeName__c</formula>
    <label>Assignee Name</label>
    <type>Text</type>
</CustomField>