force-app/main/default/objects/cve__Payment__c/fields/cve__Assignment__c.field-meta.xml
<CustomField>
    <fullName>cve__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>cve__Assignment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>