force-app/main/default/objects/cve__Payment__c/fields/cve__BankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>cve__BankAccountNumber__c</fullName>
    <label>Bank Account Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>