force-app/main/default/objects/cve__Payment__c/fields/cve__BankName__c.field-meta.xml
<CustomField>
    <fullName>cve__BankName__c</fullName>
    <label>Bank Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>