force-app/main/default/objects/cve__Payment__c/fields/cve__BankPhone__c.field-meta.xml
<CustomField>
    <fullName>cve__BankPhone__c</fullName>
    <label>Bank Phone</label>
    <type>Phone</type>
</CustomField>