force-app/main/default/objects/cve__Payment__c/fields/cve__BankRoutingNumber__c.field-meta.xml
<CustomField>
    <fullName>cve__BankRoutingNumber__c</fullName>
    <label>Bank Routing Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>