force-app/main/default/objects/cve__Payment__c/fields/cve__BeneficiaryName__c.field-meta.xml
<CustomField>
    <fullName>cve__BeneficiaryName__c</fullName>
    <formula>cve__BeneficiaryArrangement__r.cve__BeneficiaryName__c</formula>
    <label>Beneficiary Name</label>
    <type>Text</type>
</CustomField>