force-app/main/default/objects/cve__Payment__c/fields/cve__BenefitClaimed__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitClaimed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Claimed</label>
    <referenceTo>cve__BenefitClaimed__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>