force-app/main/default/objects/cve__Payment__c/fields/cve__CheckOrEftNumber__c.field-meta.xml
<CustomField>
    <fullName>cve__CheckOrEftNumber__c</fullName>
    <label>Check or EFT Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>