force-app/main/default/objects/cve__Payment__c/fields/cve__Comments__c.field-meta.xml
<CustomField>
    <fullName>cve__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>