force-app/main/default/objects/cve__Payment__c/fields/cve__ConsolidatedPaymentPayable__c.field-meta.xml
<CustomField>
    <fullName>cve__ConsolidatedPaymentPayable__c</fullName>
    <label>Consolidated Payment Payable</label>
    <type>Date</type>
</CustomField>