force-app/main/default/objects/cve__Payment__c/fields/cve__ConsolidatedPaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>cve__ConsolidatedPaymentStatus__c</fullName>
    <label>Consolidated Payment Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>