force-app/main/default/objects/cve__Payment__c/fields/cve__Contact__c.field-meta.xml
<CustomField>
    <fullName>cve__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>