force-app/main/default/objects/cve__Payment__c/fields/cve__Days__c.field-meta.xml
<CustomField>
    <fullName>cve__Days__c</fullName>
    <formula>IF(OR(ISBLANK(cve__Through__c), ISBLANK(cve__Start__c)), null, cve__Through__c - cve__Start__c + 1)</formula>
    <label>Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>