force-app/main/default/objects/cve__Payment__c/fields/cve__EmployerMatchingFica__c.field-meta.xml
<CustomField>
    <fullName>cve__EmployerMatchingFica__c</fullName>
    <label>Employer Matching FICA</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>