force-app/main/default/objects/cve__Payment__c/fields/cve__ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>cve__ExpenseType__c</fullName>
    <description>Used for Expense Type Payments</description>
    <label>Expense Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>External Consultants</fullName>
            </value>
            <value>
                <fullName>External Legal Fees</fullName>
            </value>
            <value>
                <fullName>Factual Investigations</fullName>
            </value>
            <value>
                <fullName>Forensic Accounting</fullName>
            </value>
            <value>
                <fullName>Independent Medical Exams</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rehabilitation Expenses</fullName>
            </value>
            <value>
                <fullName>Surveillance</fullName>
            </value>
            <value>
                <fullName>Third Party Legal Expenses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>