force-app/main/default/objects/cve__Payment__c/fields/cve__Explanation__c.field-meta.xml
<CustomField>
    <fullName>cve__Explanation__c</fullName>
    <label>Explanation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overpayment Correction</fullName>
            </value>
            <value>
                <fullName>Underpayment Correction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>