force-app/main/default/objects/cve__Payment__c/fields/cve__FicaMedicareWages__c.field-meta.xml
<CustomField>
    <fullName>cve__FicaMedicareWages__c</fullName>
    <label>FICA Medicare Wages</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>