force-app/main/default/objects/cve__Payment__c/fields/cve__FicaSocialSecurityWages__c.field-meta.xml
<CustomField>
    <fullName>cve__FicaSocialSecurityWages__c</fullName>
    <label>FICA Social Security Wages</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>