force-app/main/default/objects/cve__Payment__c/fields/cve__FicaTaxableBenefitAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__FicaTaxableBenefitAmount__c</fullName>
    <label>FICA Taxable Benefit Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>