force-app/main/default/objects/cve__Payment__c/fields/cve__InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>cve__InvoiceNumber__c</fullName>
    <description>Used for Expense Type Payments</description>
    <label>Invoice Number</label>
    <type>TextArea</type>
</CustomField>