force-app/main/default/objects/cve__Payment__c/fields/cve__Issue__c.field-meta.xml
<CustomField>
    <fullName>cve__Issue__c</fullName>
    <inlineHelpText>Automatically populated date used to determine if FICA taxes apply to a Payment</inlineHelpText>
    <label>Issue</label>
    <type>Date</type>
</CustomField>