force-app/main/default/objects/cve__Payment__c/fields/cve__IssueOverride__c.field-meta.xml
<CustomField>
    <fullName>cve__IssueOverride__c</fullName>
    <inlineHelpText>Manually entered date used in place of Override date if set to determine if FICA taxes apply to a Payment</inlineHelpText>
    <label>Issue Override</label>
    <type>Date</type>
</CustomField>