force-app/main/default/objects/cve__Payment__c/fields/cve__MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingAddress__c</fullName>
    <description>Emulates Contact.MailingAddress presentation.</description>
    <formula>cve__MailingStreet__c
+ BR()
+ cve__MailingCity__c
+ IF(AND(NOT(ISBLANK(cve__MailingCity__c)), OR(NOT(ISBLANK(cve__MailingState__c)), NOT(ISBLANK(cve__MailingPostalCode__c)), NOT(ISBLANK(cve__MailingCountry__c)))), BR(), &apos;&apos;)
+ cve__MailingState__c
+ IF(AND(NOT(ISBLANK(cve__MailingState__c)), NOT(ISBLANK(cve__MailingPostalCode__c))), &apos;, &apos;, &apos;&apos;)
+ cve__MailingPostalCode__c
+ IF(AND(OR(NOT(ISBLANK(cve__MailingState__c)), NOT(ISBLANK(cve__MailingPostalCode__c))), NOT(ISBLANK(cve__MailingCountry__c))), BR(), &apos;&apos;)
+ cve__MailingCountry__c</formula>
    <label>Mailing Address</label>
    <type>Text</type>
</CustomField>