force-app/main/default/objects/cve__Payment__c/fields/cve__MailingCity__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingCity__c</fullName>
    <label>Mailing City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>