force-app/main/default/objects/cve__Payment__c/fields/cve__MailingCountry__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingCountry__c</fullName>
    <label>Mailing Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>