force-app/main/default/objects/cve__Payment__c/fields/cve__MailingCountryCode__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingCountryCode__c</fullName>
    <label>Mailing Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>