force-app/main/default/objects/cve__Payment__c/fields/cve__MailingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingPostalCode__c</fullName>
    <label>Mailing Postal Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>