force-app/main/default/objects/cve__Payment__c/fields/cve__MailingState__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingState__c</fullName>
    <label>Mailing State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>