force-app/main/default/objects/cve__Payment__c/fields/cve__MailingStateCode__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingStateCode__c</fullName>
    <label>Mailing State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>