force-app/main/default/objects/cve__Payment__c/fields/cve__MailingStreet__c.field-meta.xml
<CustomField>
    <fullName>cve__MailingStreet__c</fullName>
    <label>Mailing Street</label>
    <type>TextArea</type>
</CustomField>