force-app/main/default/objects/cve__Payment__c/fields/cve__MonthlyAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__MonthlyAmount__c</fullName>
    <label>Monthly Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>