force-app/main/default/objects/cve__Payment__c/fields/cve__Net__c.field-meta.xml
<CustomField>
    <fullName>cve__Net__c</fullName>
    <label>Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>