force-app/main/default/objects/cve__Payment__c/fields/cve__NetAfterTaxes__c.field-meta.xml
<CustomField>
    <fullName>cve__NetAfterTaxes__c</fullName>
    <label>Net After Taxes</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>