force-app/main/default/objects/cve__Payment__c/fields/cve__NetBeforePaymentAdjustments__c.field-meta.xml
<CustomField>
    <fullName>cve__NetBeforePaymentAdjustments__c</fullName>
    <label>Net Before Payment Adjustments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>