force-app/main/default/objects/cve__Payment__c/fields/cve__NumberOfPaymentsConsolidated__c.field-meta.xml
<CustomField>
    <fullName>cve__NumberOfPaymentsConsolidated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Payments Consolidated</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>