force-app/main/default/objects/cve__Payment__c/fields/cve__OvernightDelivery__c.field-meta.xml
<CustomField>
    <fullName>cve__OvernightDelivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overnight Delivery</label>
    <type>Checkbox</type>
</CustomField>