force-app/main/default/objects/cve__Payment__c/fields/cve__Paid__c.field-meta.xml
<CustomField>
    <fullName>cve__Paid__c</fullName>
    <formula>OR(ISPICKVAL(cve__Status__c,&apos;Processed&apos;), ISPICKVAL(cve__Status__c,&apos;Released&apos;))</formula>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>