force-app/main/default/objects/cve__Payment__c/fields/cve__Payable__c.field-meta.xml
<CustomField>
    <fullName>cve__Payable__c</fullName>
    <label>Payable</label>
    <type>Date</type>
</CustomField>