force-app/main/default/objects/cve__Payment__c/fields/cve__PayableAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__PayableAmount__c</fullName>
    <inlineHelpText>Payable Amount from the related Assignment or Beneficiary record</inlineHelpText>
    <label>Payable Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>