force-app/main/default/objects/cve__Payment__c/fields/cve__PayableModificationReason__c.field-meta.xml
<CustomField>
    <fullName>cve__PayableModificationReason__c</fullName>
    <label>Payable Modification Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Financial Hardship</fullName>
                <default>true</default>
                <label>Financial Hardship</label>
            </value>
            <value>
                <fullName>Ancillaries</fullName>
            </value>
            <value>
                <fullName>Negotiated Pay and Finalise</fullName>
            </value>
            <value>
                <fullName>Agreed payment release date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>