force-app/main/default/objects/cve__Payment__c/fields/cve__PayeeClaimRelationshipType__c.field-meta.xml
<CustomField>
    <fullName>cve__PayeeClaimRelationshipType__c</fullName>
    <label>Payee Claim Relationship Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>