force-app/main/default/objects/cve__Payment__c/fields/cve__PayeeName__c.field-meta.xml
<CustomField>
    <fullName>cve__PayeeName__c</fullName>
    <label>Payee Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>