force-app/main/default/objects/cve__Payment__c/fields/cve__PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Check</fullName>
            </value>
            <value>
                <fullName>EFT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>