force-app/main/default/objects/cve__Payment__c/fields/cve__PaymentSpecification__c.field-meta.xml
<CustomField>
    <fullName>cve__PaymentSpecification__c</fullName>
    <label>Payment Specification</label>
    <referenceTo>cve__PaymentSpecification__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>