force-app/main/default/objects/cve__Payment__c/fields/cve__Print__c.field-meta.xml
<CustomField>
    <fullName>cve__Print__c</fullName>
    <label>Print</label>
    <type>Date</type>
</CustomField>