force-app/main/default/objects/cve__Payment__c/fields/cve__Reissued__c.field-meta.xml
<CustomField>
    <fullName>cve__Reissued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reissued</label>
    <type>Checkbox</type>
</CustomField>