force-app/main/default/objects/cve__Payment__c/fields/cve__Release__c.field-meta.xml
<CustomField>
    <fullName>cve__Release__c</fullName>
    <label>Release</label>
    <type>Date</type>
</CustomField>