force-app/main/default/objects/cve__Payment__c/fields/cve__Sequence__c.field-meta.xml
<CustomField>
    <fullName>cve__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>