force-app/main/default/objects/cve__Payment__c/fields/cve__Status__c.field-meta.xml
<CustomField>
    <fullName>cve__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Stop</fullName>
            </value>
            <value>
                <fullName>Void</fullName>
            </value>
            <value>
                <fullName>Consolidated</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>