force-app/main/default/objects/cve__Payment__c/fields/cve__StopOrVoid__c.field-meta.xml
<CustomField>
    <fullName>cve__StopOrVoid__c</fullName>
    <label>Stop or Void</label>
    <type>Date</type>
</CustomField>