force-app/main/default/objects/cve__Payment__c/fields/cve__Taxes__c.field-meta.xml
<CustomField>
    <fullName>cve__Taxes__c</fullName>
    <description>Uses the Logic:
cve__NetBeforeTaxes__c - cve__NetAfterTaxes__c

but if NetAfterTaxes is null then this falls back on the original logic of:

cve__NetBeforeTaxes__c - cve__Net__c 

This will keep payments generated before NetAferTaxes was added in a consistent state.</description>
    <formula>cve__NetBeforeTaxes__c - IF(isNull(cve__NetAfterTaxes__c), cve__Net__c, cve__NetAfterTaxes__c)</formula>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>