force-app/main/default/objects/cve__Payment__c/fields/cve__TaxIdNumber__c.field-meta.xml
<CustomField>
    <fullName>cve__TaxIdNumber__c</fullName>
    <label>Tax ID Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>