force-app/main/default/objects/cve__Payment__c/fields/cve__Testing__c.field-meta.xml
<CustomField>
    <fullName>cve__Testing__c</fullName>
    <description>Intended for testing only</description>
    <label>Testing</label>
    <length>10</length>
    <type>Text</type>
</CustomField>