force-app/main/default/objects/cve__Payment__c/fields/cve__Type__c.field-meta.xml
<CustomField>
    <fullName>cve__Type__c</fullName>
    <description>Used in manual Payments page - determines whether a Payment was created using Add IP Payment, Add Lump Sum Payment, or Add Expense Payment options.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>Lump Sum</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>