force-app/main/default/objects/cve__Payment__c/fields/cve__UnallocatedPayment__c.field-meta.xml
<CustomField>
    <fullName>cve__UnallocatedPayment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unallocated Payment</label>
    <referenceTo>cve__UnallocatedPayment__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>