force-app/main/default/objects/cve__Payment__c/fields/cve__WeekDays__c.field-meta.xml
<CustomField>
    <fullName>cve__WeekDays__c</fullName>
    <description>From https://success.salesforce.com/answers?id=90630000000gv5PAAQ or https://help.salesforce.com/HTViewSolution?id=000004526&amp;language=en_US</description>
    <formula>IF(
    OR(ISBLANK(cve__Through__c), ISBLANK(cve__Start__c)),
    null,
    CASE(MOD(cve__Start__c - DATE(1985, 6, 24), 7), 
        0, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 2, 2, 3, 3, 4, 4, 5, 5, 5, 6, 5, 1), 
        1, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 2, 2, 3, 3, 4, 4, 4, 5, 4, 6, 5, 1), 
        2, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 2, 2, 3, 3, 3, 4, 3, 5, 4, 6, 5, 1), 
        3, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 2, 2, 2, 3, 2, 4, 3, 5, 4, 6, 5, 1), 
        4, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 1, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 1), 
        5, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0), 
        6, CASE(MOD(cve__Through__c - cve__Start__c, 7), 1, 1, 2, 2, 3, 3, 4, 4, 5, 5, 6, 5, 0), 
        999
    ) + (FLOOR((cve__Through__c - cve__Start__c) / 7) * 5)
)</formula>
    <label>Week Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>