force-app/main/default/objects/cve__Payment__c/fields/Payment_Release__c.field-meta.xml
<CustomField>
    <fullName>Payment_Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Release</label>
    <referenceTo>Payment_Release__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>