force-app/main/default/objects/cve__Payment__c/recordTypes/cve__Calculated.recordType-meta.xml
<RecordType>
    <fullName>cve__Calculated</fullName>
    <active>true</active>
    <label>Calculated</label>
</RecordType>