force-app/main/default/objects/cve__Payment__c/recordTypes/cve__LumpSum.recordType-meta.xml
<RecordType>
    <fullName>cve__LumpSum</fullName>
    <active>true</active>
    <label>Lump Sum</label>
</RecordType>