force-app/main/default/objects/cve__Payment__c/recordTypes/cve__LumpSumRepayment.recordType-meta.xml
<RecordType>
    <fullName>cve__LumpSumRepayment</fullName>
    <active>true</active>
    <label>Lump Sum Repayment</label>
</RecordType>