force-app/main/default/objects/cve__Payment__c/recordTypes/cve__StopPaymentReversalCredit.recordType-meta.xml
<RecordType>
    <fullName>cve__StopPaymentReversalCredit</fullName>
    <active>true</active>
    <label>Stop Payment Reversal Credit</label>
</RecordType>