force-app/main/default/objects/cve__Payment__c/recordTypes/cve__VoidPaymentReversalCredit.recordType-meta.xml
<RecordType>
    <fullName>cve__VoidPaymentReversalCredit</fullName>
    <active>true</active>
    <label>Void Payment Reversal Credit</label>
</RecordType>