force-app/main/default/objects/cve__Payment__c/recordTypes/cve__WaivedOverpayment.recordType-meta.xml
<RecordType>
    <fullName>cve__WaivedOverpayment</fullName>
    <active>true</active>
    <label>Waived Overpayment</label>
</RecordType>