force-app/main/default/objects/cve__Payment__c/validationRules/cve__RequiredFields.validationRule-meta.xml
<ValidationRule>
    <fullName>cve__RequiredFields</fullName>
    <active>false</active>
    <errorConditionFormula>cve__InvoiceNumber__c == null</errorConditionFormula>
    <errorMessage>Please ensure these fields are populated: Invoice Number</errorMessage>
</ValidationRule>