force-app/main/default/objects/cve__Payment__c/listViews/cve__All.listView-meta.xml
<ListView>
    <fullName>cve__All</fullName>
    <columns>NAME</columns>
    <columns>cve__Claim__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>cve__PayeeName__c</columns>
    <columns>cve__Status__c</columns>
    <columns>cve__Start__c</columns>
    <columns>cve__Through__c</columns>
    <columns>cve__Net__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>